# obsidian-vault-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  ruff.yml
docs/: tunneling.md
docs/superpowers/plans/: 2026-04-25-critical-and-important-fixes.md
src/headless_obsidian_mcp/app/: cli.py  daemon.py
src/headless_obsidian_mcp/core/: config.py  logging.py
src/headless_obsidian_mcp/index/: chunking.py  search.py  store.py
src/headless_obsidian_mcp/markdown/: frontmatter.py
src/headless_obsidian_mcp/transport/: formatters.py  http.py  tools.py
src/headless_obsidian_mcp/vault/: links.py  listing.py  notes.py  policy.py  service.py  sync.py  watcher.py
src/obsidian_mcp/: __init__.py  cli.py  config.py  constants.py  frontmatter.py  logging.py  markdown.py  obsidian.py  search.py  server.py  store.py  types.py  vault.py  watcher.py
src/obsidian_mcp/app/: cli.py  daemon.py
src/obsidian_mcp/core/: __init__.py  config.py  constants.py  logging.py  types.py
src/obsidian_mcp/index/: __init__.py  chunking.py  search.py  store.py
src/obsidian_mcp/markdown/: __init__.py  frontmatter.py  obsidian.py
src/obsidian_mcp/transport/: __init__.py  formatters.py  http.py  pagination.py  tools.py
src/obsidian_mcp/vault/: __init__.py  links.py  listing.py  notes.py  (+5 more)
tests/: __init__.py  test_chunking.py  test_cli.py  test_config.py  test_daemon.py  test_formatters.py  test_frontmatter.py  test_logging.py  test_obsidian.py  test_pagination.py  test_search.py  test_server.py  test_store.py  test_vault.py  test_watcher.py
(+19 files in other folders)
