[project]
name = "obsidian-vault-mcp"
version = "0.1.0"
description = "Headless HTTP MCP server for Obsidian-flavored Markdown vaults"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.0",
    "mcp>=1.16.0",
    "openai>=1.109.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "ruamel.yaml>=0.18.10",
    "sqlite-vec>=0.1.9",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.5",
]

[project.scripts]
obsidian-vault-mcp = "obsidian_vault_mcp.app.cli:main"
ovm = "obsidian_vault_mcp.app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_vault_mcp"]
